// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GameMove should render 1`] = `
<li
  key="1"
>
  <button
    onClick={[Function]}
  >
    Go to move #1
  </button>
</li>
`;

exports[`GameMove should render with game start desc 1`] = `
<li
  key="0"
>
  <button
    onClick={[Function]}
  >
    Go to game start
  </button>
</li>
`;

exports[`GameMove should render with step desc 1`] = `
<li
  key="1"
>
  <button
    onClick={[Function]}
  >
    Go to move #1
  </button>
</li>
`;

exports[`GameMove should trigger onClick when clicked 1`] = `
<li
  key="0"
>
  <button
    onClick={[Function]}
  >
    Go to game start
  </button>
</li>
`;
